stop breadcrumbs shifting on hover

--- a/air-quality-ui/src/components/header/Breadcrumbs.module.css
+++ b/air-quality-ui/src/components/header/Breadcrumbs.module.css
@@ -10,6 +10,11 @@
     padding: 0 8px 0 8px;
 }
 
+.breadcrumb:first-child {
+    width: 2.5em;
+    text-align: center;
+}
+
 .breadcrumb-link {
     color: white;
     text-decoration: none;
